--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
         // Clear canvas function
         function clearCanvas() {
             ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear the canvas
-            ctx.fillRect(0, 0, canvas.width, canvas.height); // Optional: Add a white background
+            ctx.fillRect(0, 0, canvas.width, canvas.height); 
             document.getElementById("prediction").textContent = "---"; // Reset prediction text
         }
 
